--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ES6 review</title>
+    <link rel="stylesheet" href="./style.css" class="style">
+    <title>ES6</title>
 </head>
 <body>
+    <header>
+        <h1 id="heading">Learning ES6</h1>
+        <p>With myself</p>
+    </header>
+
+    <div id="container">
+            HelloUniverse
+    </div>
+
+
     
+    <!-- --------------------------- -->
+
+        <script src="./main.js"></script>
 </body>
 </html>
